--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
         <div class="container2">
             <div class="content2" style="background-color:aqua;">
                 <h1 style="font-size: 1.6rem">Math</h1>
-                <p style="max-width: 20ch; margin: auto;">While I'm no master by any means, I do enjoy the process of learning and the joy of being able to crack a tricky problem.</p>
+                <p style="max-width: 20ch; margin: auto; font-size: 20px;">While I'm no master by any means, I do enjoy the process of learning and the joy of being able to crack a tricky problem.</p>
             </div>
             <div class="content2" style="background-color: hsl(90, 100%, 65%);">
                 <h1 style="font-size: 1.6rem">Coding</h1>
-                <p style="max-width: 20ch; margin: auto;">I love using HTML, CSS, and JavaScript to build webpages. I'm also learning Python.</p>
+                <p style="max-width: 20ch; margin: auto; font-size: 20px;">I love using HTML, CSS, and JavaScript to build webpages. I'm also learning Python.</p>
             </div>
             <div class="content2" style="background-color:hsl(60, 100%, 65%);">
                 <h1 style="font-size: 1.6rem">Tennis</h1>
-                <p style="max-width: 20ch; margin: auto;">Tennis is a great sport and I am lucky to be a part of the amazing community. I've met many friends playing tennis.</p>
+                <p style="max-width: 20ch; margin: auto; font-size: 20px;">Tennis is a great sport and I am lucky to be a part of the amazing community. I've met many friends playing tennis.</p>
             </div>
             <div class="content2">
                 <h1 style="font-size: 1.6rem">Science</h1>
-                <p style="max-width: 20ch; margin: auto;">STEM competitions are really fun and I always learn a lot. Many smart people attend!</p>
+                <p style="max-width: 20ch; margin: auto; font-size: 20px;">STEM competitions are really fun and I always learn a lot. Many smart people attend!</p>
             </div>
         </div>
     </div>
