--- a/contacts.html
+++ b/contacts.html
@@ -28,8 +28,8 @@
     </header>
     <div class="container">
         <div class="aboutMe">
-            <p><strong>Reach me at: </strong></p>
-            <p style="font-size: 40px; font-weight: bold;">danieldkdao@gmail.com</p>
+            <p style="font-size: 18px;"><strong>Reach me at: </strong></p>
+            <p style="font-size: 30px; font-weight: bold;">danieldkdao@gmail.com</p>
         </div>
     </div>
     
