--- a/index.html
+++ b/index.html
@@ -13,41 +13,24 @@
 </head>
 <body>
     <h1>Daniel Dao's Personal Page</h1>
-    <header>
-        <nav>
-            <div class="header">
-                <a href="index.html" class="a1">About Me</a>
-                <span>|</span>
-                <a href="projects.html" class="a2">Projects</a>
-                <span>|</span>
-                <a href="essays.html" class="a3">Essays</a>
-                <span>|</span>
-                <a href="contacts.html" class="a4">Contact</a>
-            </div>
-        </nav>
-    </header>
     <div class="container">
         <div class="aboutMe">
-            <p style="font-size: 18px;">Hi! My name is Daniel Dao. I'm an eighth grader in Lawrence, Kansas.</p>
+            <p style="font-size: 18px;">So glad you're here! I'm Daniel, an eighth-grader from Lawrence, Kansas. This website is a map of my world—full of all the things I love to do. Ready to start exploring?</p>
         </div>
         <h2>Interests</h2>
         <div class="container2">
-            <div class="content2" style="background-color:aqua;">
-                <h1 style="font-size: 1.6rem">Math</h1>
-                <p style="max-width: 20ch; margin: auto; font-size: 18px;">While I'm no master by any means, I do enjoy the process of learning and the joy of being able to crack a tricky problem.</p>
-            </div>
-            <div class="content2" style="background-color: hsl(90, 100%, 65%);">
-                <h1 style="font-size: 1.6rem">Coding</h1>
-                <p style="max-width: 20ch; margin: auto; font-size: 18px;">I love using HTML, CSS, and JavaScript to build webpages. I'm also learning Python.</p>
-            </div>
-            <div class="content2" style="background-color:hsl(60, 100%, 65%);">
-                <h1 style="font-size: 1.6rem">Tennis</h1>
-                <p style="max-width: 20ch; margin: auto; font-size: 18px;">Tennis is a great sport and I am lucky to be a part of the amazing community. I've met many friends playing tennis.</p>
-            </div>
-            <div class="content2">
-                <h1 style="font-size: 1.6rem">Science</h1>
-                <p style="max-width: 20ch; margin: auto; font-size: 18px;">STEM competitions are really fun and I always learn a lot. Many smart people attend!</p>
-            </div>
+            <a href="business.html" class="content2" style="background-color:aqua;">
+                <h1 style="font-size: 1.6rem">Our Business</h1>
+            </a>
+            <a href="stemProjects.html" class="content2" style="background-color: hsl(90, 100%, 65%);">
+                <h1 style="font-size: 1.6rem">STEM Projects</h1>
+            </a>
+            <a href="projects.html" class="content2" style="background-color:hsl(60, 100%, 65%);">
+                <h1 style="font-size: 1.6rem">Other Hobbies</h1>
+            </a>
+            <a href="more.html" class="content2" style="background-color: hsl(208, 34%, 83%);">
+                <h1 style="font-size: 1.6rem">More on me</h1>
+            </a>
         </div>
     </div>
 </body>
